<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/distancia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Distância"
        android:layout_marginTop="8dp"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        tools:ignore="TextViewEdits" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Total de quilómetros"
        android:textSize="15sp" />


    <EditText
        android:id="@+id/preco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Preço"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        tools:ignore="TextViewEdits" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/precoPorLitro"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/autonomia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/autonomia"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        tools:ignore="TextViewEdits" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/kmsPorLitro"
        android:textSize="15sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:text="@string/seuGastoTotalSeraDe"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/valorFinal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/valor"
        android:textSize="50sp" />

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:gravity="center"
        android:backgroundTint="@color/lightGreen"
        android:textColor="@color/white"
        android:text="@string/calcular"
        android:textSize="20sp" />


</LinearLayout>